<resources>
    <string name="app_name">20230118-OscarMoreno-NYCSchools</string>
    <string name="empty" />
    <string name="school_name">School Name</string>
    <string name="school_address">School Address</string>
    <string name="contact_info">Contact Info</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="math">Math</string>
    <string name="full_score">600</string>
    <string name="critical_reading">Critical Reading</string>
    <string name="writing">Writing</string>
    <string name="num_task_taker">Task takers</string>
    <string name="sat_scores">SAT Scores</string>
    <string name="nyc_school_challenges">20230118-OscarMoreno-NYCSchools</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="navigate_back">Navigate back</string>
</resources>