<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/RecyclerViewBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_arrow_back_24"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dividerThickness="1dp"/>

            <TextView
                android:id="@+id/school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:linksClickable="true"
                android:text="@string/school_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/school_address_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_map" />

                <TextView
                    android:id="@+id/school_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:layout_marginStart="10dp"
                    android:linksClickable="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/light_blue"
                    tools:text="@string/school_address" />
            </LinearLayout>

            <TextView
                android:id="@+id/contact_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:linksClickable="true"
                android:text="@string/contact_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/phone_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:layout_marginStart="10dp"
                    android:linksClickable="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/light_blue"
                    tools:text="@string/phone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:layout_marginStart="10dp"
                    android:linksClickable="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/light_blue"
                    tools:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/website_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_web" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:layout_marginStart="10dp"
                    android:linksClickable="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/light_blue"
                    tools:text="@string/website" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:text="@string/math"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/secondaryDarkColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/math_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/full_score" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:text="@string/critical_reading"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/secondaryDarkColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/math_score" />

                    <TextView
                        android:id="@+id/critical_reading_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/math_score"
                        tools:text="@string/full_score" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:text="@string/writing"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/secondaryDarkColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/critical_reading_score" />

                    <TextView
                        android:id="@+id/writing_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/critical_reading_score"
                        tools:text="@string/full_score" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:text="@string/num_task_taker"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/secondaryDarkColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/writing_score" />

                    <TextView
                        android:id="@+id/num_task_taker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/writing_score"
                        tools:text="@string/full_score" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>